# freako

./: .gitignore  AGENT  CHANGES.md  CHANGES_SUMMARY.md  CLAUDE.md  Cargo.toml  README.md  run-gui.ps1  run-gui.sh  scratch_diff_demo.rs
.claude/: settings.local.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/tui/: message.rs  mod.rs  render.rs  settings.rs
crates/cli/src/tui/tools/: default.rs  edit_file.rs  glob.rs  grep.rs  list_dir.rs  mod.rs  read_file.rs  shell.rs  sub_agent.rs  web.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/agent/: compaction.rs  context.rs  events.rs  loop_.rs  mod.rs  prompt.rs
crates/core/src/agent/prompts/: compaction.txt  enter_plan_mode.txt  plan_mode.txt  sub_agent_mode.txt  sub_agent_tool.txt  system.txt
crates/core/src/config/: mod.rs  types.rs
crates/core/src/memory/: store.rs  types.rs
crates/core/src/provider/: anthropic.rs  bedrock.rs  codex.rs  mod.rs  openai.rs  openai_oauth.rs  types.rs
crates/core/src/session/: mod.rs  store.rs  title.rs  types.rs
crates/core/src/skill/: discovery.rs  mod.rs  store.rs  types.rs
crates/core/src/tools/: add_task.rs  delete_memory.rs  delete_task.rs  diff.rs  edit_plan.rs  edit_task.rs  enter_plan_mode.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  list_dir.rs  list_memories.rs  list_skills.rs  mod.rs  read_memory.rs  read_plan.rs  read_task.rs  review_plan.rs  shell.rs  sub_agent.rs  tool_name.rs  update_task_status.rs  web_fetch.rs  web_search.rs  write_memory.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  main.rs
crates/gui/src/ui/: approval_dialog.rs  chat_view.rs  code_view.rs  diff_view.rs  input_area.rs  mod.rs  plan_panel.rs  settings_panel.rs  sidebar.rs  status_bar.rs  theme.rs  tool_view.rs  widgets.rs
crates/iced-selectable-markdown/: Cargo.toml
crates/iced-selectable-markdown/src/: lib.rs  selectable_rich.rs  state.rs  view.rs
