[workspace]
resolver = "3"
members = ["crates/core", "crates/gui", "crates/cli", "crates/iced-selectable-markdown"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Core shared
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
similar = "2.6"
