[package]
name = "freako-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "freako"
path = "src/main.rs"

[dependencies]
freako-core = { path = "../core" }

ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
pulldown-cmark = "0.12"
ansi-to-tui = "8.0.1"
syntect.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
open = "5"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
