[package]
name = "freako-core"
version.workspace = true
edition.workspace = true

[dependencies]
# AI Providers
async-openai = { version = "0.33", features = ["chat-completion"] }
aws-sdk-bedrock = "1"
aws-sdk-bedrockruntime = "1"
aws-config = "1"
aws-smithy-types = "1"

# HTTP (for Anthropic)
reqwest = { version = "0.12", features = ["json", "stream"] }
async-stream = "0.3"

# Async
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Config
dirs.workspace = true

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# File operations
glob = "0.3"
regex = "1"
ignore = "0.4"
similar.workspace = true

# OAuth / PKCE
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"

# Utilities
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
